--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,3 +1,4 @@
+<h2>Join Finstagram!</h2>
 <ul class ="errors">
     <% @user.errors.full_messages.each do |message| %>
         <li><%= message %><li>
@@ -10,8 +11,8 @@
         <input type = "email" id="email" name="email" value="<%= @user.email %>">
     </div>
     <div class="form-group">
-        <label for="avatar url">Avatar URL</label>
-        <input type = "text" id="avatar url" name="avatar url" value="<%= @user.avatar_url %>" >
+        <label for="avatar_url">Avatar URL</label>
+        <input type = "text" id="avatar_url" name="avatar_url" value="<%= @user.avatar_url %>" >
     </div>
     <div class="form-group">
         <label for="username">Username</label>
